Fixed button looking weird on mobile

--- a/src/assets/style/navbar.scss
+++ b/src/assets/style/navbar.scss
@@ -14,6 +14,22 @@
     z-index: 999;
     font-size: 40px;
 
+    background-color: Transparent;
+    border: none;
+    overflow: hidden;
+    outline:none;
+
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+
+    &:focus {
+      background-color: Transparent;
+      border: none;
+      overflow: hidden;
+      outline:none;
+      box-shadow:none !important;
+    }
+
     @include desktop {
       display: none;
     }
